crates/rome_js_formatter/tests/specs/prettier/js/sloppy-mode/delete-variable.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: delete-variable.js
---
# Input
```js
function foo() {
  var bar = 1;
  delete bar;}

```

# Output
```js
function foo() {
  var bar = 1;
  delete bar;
}

```

# Errors
```
error[SyntaxError]: the target for a delete operator cannot be a single identifier
  ┌─ delete-variable.js:3:10
  │
3 │   delete bar;}
  │          ^^^


```


